--- a/_includes/subpage-logo.html
+++ b/_includes/subpage-logo.html
@@ -1,5 +1,5 @@
-<a href="{{ site.baseurl }}/" class="absolute l0 t0 font-size-5 inline-block dim-color-white underline-none lowercase px1 py2">
-  <span class="inline-block-middle svg-shadow-medium">
+<a href="{{ site.baseurl }}/" class="absolute l0 t0 font-size-5 inline-block nowrap dim-color-white underline-none lowercase px1 py2">
+  <span class="inline-block-middle svg-shadow-medium pt1 pl1">
     <svg viewBox="0 0 32 32" width="32" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="4%" aria-hidden="true" class="pt1 pl1">
       <path d="M10 9 L10 24 C10 28 13 30 16 30 19 30 22 28 22 24 L22 6 C22 3 20 2 18 2 16 2 14 3 14 6 L14 23 C14 24 15 25 16 25 17 25 18 24 18 23 L18 9"></path>
     </svg>
