Always show X on project and article pages.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -41,6 +41,6 @@ layout: default
 <script>
   console.log("from = " + sessionStorage.getItem("via"));
   if (sessionStorage.getItem("via") == "home") {
-    document.getElementById("close-post").style.display = "block";
+    document.getElementById("close-post").setAttribute("onclick", "window.history.back(); return false;");
   }
 </script>
