--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,6 @@ layout: default
 <script>
   console.log("from = " + sessionStorage.getItem("via"));
   if (sessionStorage.getItem("via") == "articles") {
-    document.getElementById("close-post").style.display = "block";
+    document.getElementById("close-post").setAttribute("onclick", "window.history.back(); return false;");
   }
 </script>
