--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="lg-footer align-center bg-slate color-white py5">
+<footer class="lg-footer align-center bg-slate color-white pt6 pb5">
 
   <a href="{{ site.baseurl }}/">
     <svg viewBox="0 0 32 32" width="64" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="3%" aria-hidden="true" class="color-blue">
