Cleaned up img-zoom. Slight restructure, giving more flexibility for custom HTML in post pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 
   </header>
 
-  <section class="section-max-width width-full center-block pb7 article-top-padding article-side-padding">
+  <section class="width-full article-top-padding pb7">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
