--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -27,7 +27,7 @@ layout: default
     .post-content a { color: rgb({{ page.color }}) }
   </style>
 
-  <section class="section-max-width width-full center-block pb7 article-top-padding article-side-padding">
+  <section class="width-full article-top-padding">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
