Added PhotoSwipe.js for showcasing work. Squad page is getting very close

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -39,6 +39,7 @@ layout: default
 
 {% include footer.html %}
 {% include img-zoom.js %}
+{% include photoswipe.html %}
 
 <script>
   console.log("from = " + sessionStorage.getItem("via"));
