--- a/css/main.scss
+++ b/css/main.scss
@@ -135,10 +135,34 @@ hr {
     padding-left: 1px;
 }
 
-.project-gallery img {
+.project-item {
+    position: relative;
     border-radius: 0;
     padding: 0 1px 1px 0;
 }
+
+.project-item-caption {
+    opacity: 0;
+    pointer-events: none;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 1.5;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: .0625em;
+    color: #fff;
+    background: rgba(40, 43, 49, 0.85);
+    transition: opacity 0.4s ease;
+    border-width: 0 1px 1px 0;
+    border-style: solid;
+    border-color: #fff;
+}
+
+.notouch .project-item:hover .project-item-caption { opacity: 1; }
 
 
 // Custom Media Queries
@@ -211,5 +235,6 @@ hr {
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
     "tinyset",
-    "syntax-highlighting"
+    "syntax-highlighting",
+    "photoswipe"
 ;
