--- a/_includes/splash.html
+++ b/_includes/splash.html
@@ -11,11 +11,11 @@
   </a>
 
   <span class="center-block font-size-7 uppercase tracking-super opacity-5">
-  Designer &amp; Tinkerer
+    Designer &amp; Tinkerer
   </span>
   
   <p class="sm-header-tagline font-size-4 font-weight-3 my4 center-block" style="max-width: 18rem">
-    Passionate about creating<br /> digital products—obsessed with simplicity &amp; performance.
+    Passionate about creating<br /> digital products—obsessed with simplicity &amp; experience.
   </p>
 
   {% include icon-twitter.html username="danklammer" %}
