Updated gallery caption styles. Pills!

--- a/_includes/photoswipe.html
+++ b/_includes/photoswipe.html
@@ -61,8 +61,8 @@
             <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
             </button>
 
-            <div class="pswp__caption">
-                <div class="pswp__caption__center font-size-5 color-white"></div>
+            <div class="pswp__caption align-center">
+                <div class="pswp__caption__center inline-block font-size-6 font-weight-600 color-white br5 text-shadow-medium"></div>
             </div>
 
         </div>
