--- a/_sass/_photoswipe.scss
+++ b/_sass/_photoswipe.scss
@@ -445,10 +445,9 @@ a.pswp__share--download:hover {
     color: #BBB; }
 
 .pswp__caption__center {
-  text-align: center;
-  max-width: 420px;
-  margin: 0 auto;
-  padding: 10px 10px 22px;
+  padding: 4px 16px;
+  background-color: rgba(255,255,255,0.15);
+  margin-bottom: 20px;
   }
 
 .pswp__caption--empty {
