--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,10 +9,12 @@ layout: default
       {% include subpage-logo.html %}
       {% include subpage-close.html %}
 
-      <div class="center-block align-center line-height-none text-shadow-medium px3 pt7 pb3">
-          <h2 class="font-size-1 pt3">{{ page.title }}</h2>
-          <time class="block font-size-6 line-height-title tracking-wide opacity-8 py2">{{ page.year }}</time>
-          <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</span>
+      <div class="center-block align-center line-height-none px3 pt7 pb2">
+          <h1 class="font-size-1">{{ page.title }}</h1>
+          <div class="block font-size-5 tracking-slight font-weight-5 py3">{{ page.tagline }}</div>
+          <div class="inline-block font-size-6 font-weight-4 tracking-slight br5 px3 py2 mt1 mb2" style="background: rgba(0,0,0,0.12)">
+            {{ page.year }} <small class="bullet inline-block-middle opacity-7">&bull;</small> {{ page.role }}
+          </div>
       </div>
 
       {% if page.cover-image %}
