--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -383,10 +383,12 @@ i, em, .italic {
 
 
 /* Shadows */
+.text-shadow-none   { text-shadow: none                        }
 .text-shadow-light  { text-shadow: 0 1px 2px rgba(0, 0, 0, .3) }
 .text-shadow-medium { text-shadow: 0 1px 4px rgba(0, 0, 0, .4) }
 .text-shadow-dark   { text-shadow: 0 1px 6px rgba(0, 0, 0, .5) }
 
+.box-shadow-none    { box-shadow: none                         }
 .box-shadow-light   { box-shadow: 0 1px 1px rgba(0, 0, 0, .2)  }
 .box-shadow-medium  { box-shadow: 0 1px 2px rgba(0, 0, 0, .3)  }
 .box-shadow-dark    { box-shadow: 0 1px 3px rgba(0, 0, 0, .4)  }
