--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,11 @@ hr {
     margin: 2.5rem 0;
 }
 
+.bullet {
+    font-size: 8px;
+    padding: 0 2px;
+}
+
 
 // Navigation
 .navlink-off, .navlink-on { position: relative }
