--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -9,16 +9,16 @@ layout: default
       {% include subpage-logo.html %}
       {% include subpage-close.html %}
 
-      <div class="center-block align-center line-height-none px3 pt7 pb2">
+      <div class="center-block align-center line-height-none px3 pt7 pb3">
           <h1 class="font-size-1">{{ page.title }}</h1>
-          <div class="block font-size-5 tracking-slight font-weight-5 py3">{{ page.tagline }}</div>
+          <div class="block font-size-3 font-weight-3 py3">{{ page.tagline }}</div>
           <div class="inline-block font-size-6 font-weight-4 tracking-slight br5 px3 py2 mt1 mb2" style="background: rgba(0,0,0,0.12)">
             {{ page.year }} <small class="bullet inline-block-middle opacity-7">&bull;</small> {{ page.role }}
           </div>
       </div>
 
-      {% if page.cover-image %}
-      <div class="width-full center-block" style="max-width: 600px; height: 90vw; max-height: 400px; background-image: url({{ page.cover-image }}); background-position: center bottom; background-size: auto 100%; background-repeat: no-repeat">
+      {% if page.hero-image %}
+      <div class="width-full center-block" style="height: 90vw; max-height: 435px; background-image: url({{ page.hero-image }}); background-position: center bottom; background-size: auto 100%; background-repeat: {{ page.hero-repeat }}">
       </div>
       {% endif %}
 
