--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -29,7 +29,7 @@ layout: default
     .post-content a { color: rgb({{ page.color }}) }
   </style>
 
-  <section class="width-full article-top-padding">
+  <section class="width-full article-top-padding pb7">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
