New breakpoint displaying work posts

--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,7 +7,7 @@
     <section class="width-full center-block align-center pb3">
 
         {% for post in site.categories.work %}<!--
-        --><div class="lg-width-50 sm-width-100 inline-block p2">
+        --><div class="md-width-50 inline-block p2">
           <a class="center-block color-white underline-none line-height-none text-shadow-medium box-shadow-medium br3 overflow-hidden" style="background: rgb({{ post.color }});" href="{{ post.url | prepend: site.baseurl }}" >
 
             <div class="center-block px3 pt5 pb2">
