--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
 </article>
 
 {% include footer.html %}
-{% include img-zoom.js %}
+{% include zoomable.js %}
 
 <script>
   console.log("from = " + sessionStorage.getItem("via"));
