--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -40,7 +40,7 @@ layout: default
 </article>
 
 {% include footer.html %}
-{% include img-zoom.js %}
+{% include zoomable.js %}
 {% include photoswipe.html %}
 
 <script>
