--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="center-block color-white text-shadow-medium box-shadow-light pt5" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0, rgba(0,0,0,0) 8rem), rgb({{ page.color }});">
+  <header class="center-block color-white text-shadow-medium box-shadow-light pt5 overflow-hidden" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0, rgba(0,0,0,0) 8rem), rgb({{ page.color }});">
       
       {% include subpage-logo.html %}
       {% include subpage-close.html %}
@@ -18,16 +18,12 @@ layout: default
       </div>
 
       {% if page.hero-image %}
-      <div class="width-full center-block" style="height: 80vw; max-height: 435px; {% if page.hero-maxwidth %}max-width: {{ page.hero-maxwidth }};{% endif %} background-image: url({{ page.hero-image }}); background-size: auto 100%; background-position: {{ page.hero-position }}; background-repeat: {{ page.hero-repeat }}">
+      <div class="width-full center-block slidefade" style="height: 80vw; max-height: 435px; {% if page.hero-maxwidth %}max-width: {{ page.hero-maxwidth }};{% endif %} background-image: url({{ page.hero-image }}); background-size: auto 100%; background-position: {{ page.hero-position }}; background-repeat: {{ page.hero-repeat }}">
       </div>
       {% endif %}
 
 
   </header>
-
-  <style>
-    .post-content a { color: rgb({{ page.color }}) }
-  </style>
 
   <section class="width-full article-top-padding pb7">
 
