--- a/css/main.scss
+++ b/css/main.scss
@@ -68,6 +68,13 @@ hr {
     padding: 0 2px;
 }
 
+@keyframes slideFade { from { transform: translateY(15px); opacity: 0 } to { transform: translateY(0); opacity: 1 } }
+
+.slidefade {
+    transform: translateY(15px);
+    opacity: 0;
+    animation: slideFade 1s ease-out 1 forwards;
+}
 
 // Navigation
 .navlink-off, .navlink-on { position: relative }
