Update Forms elements to use appearance-none class instead

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -19,13 +19,13 @@
 <form method="POST" action="https://formspree.io/{{ site.contact_email }}" class="contact-form relative clearfix" style="margin: 0 -0.5rem">
     
     <div class="inline-block width-full lg-width-50 p2">
-        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="width-full p2 br3" tabindex="1" required>
+        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="width-full p2 br3 appearance-none" tabindex="1" required>
 
     </div><div class="inline-block width-full lg-width-50 p2">
-        <input type="email" name="_replyto" placeholder="Your email" class="width-full p2 br3" tabindex="2" required>
+        <input type="email" name="_replyto" placeholder="Your email" class="width-full p2 br3 appearance-none" tabindex="2" required>
 
     </div><div class="inline-block width-full p2">
-        <textarea name="message" rows="4" cols="50" placeholder="Your message" class="width-full p2 br3" style="resize:none" tabindex="3" required></textarea>
+        <textarea name="message" rows="4" cols="50" placeholder="Your message" class="width-full p2 br3 appearance-none" style="resize:none" tabindex="3" required></textarea>
 
     </div>
 
