--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
   {% if page.path contains 'work' %}
     <style>
       .post-content a, .color-page { color: rgb({{ page.color }}) }
-      .post-content a.btn { color: #fff; background: rgb({{ page.color }}) }
+      .post-content a.btn, .bg-page { color: #fff; background: rgb({{ page.color }}) }
     </style>
   {% endif %}
 
