--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -8,7 +8,7 @@
 
 */
 .highlight .hll { background-color: #dfe1e8 }
-.highlight, .highlighter-rouge { background: #eff1f5; color: #2b303b }
+.highlight { background: #f8f9fb; color: #2b303b }
 .highlight .c { color: #a7adba } /* Comment */
 .highlight .err { color: #bf616a } /* Error */
 .highlight .k { color: #b48ead } /* Keyword */
