--- a/css/main.scss
+++ b/css/main.scss
@@ -40,7 +40,8 @@ a { color: #3498db }
 .post-content h2,
 .post-content h3,
 .post-content h4,
-.highlight {
+.highlight,
+.highlighter-rouge {
     max-width: $sm-breakpoint;
     padding-left: $article-side-padding;
     padding-right: $article-side-padding;
@@ -133,9 +134,7 @@ hr {
 }
 
 .highlighter-rouge {
-    font-size: small;
-    padding: 0.25rem;
-    border-radius: .1875rem;
+    padding: 0;
 }
 
 .lg-page .header-tagline { display: none }
