Re-org and cleanup (particularly includes)

--- a/_includes/layout/footer.html
+++ b/_includes/layout/footer.html
@@ -6,7 +6,7 @@
     </svg>
   </a>
 
-  {% include nav.html %}
-  {% include copyright.html %}
+  {% include layout/nav.html %}
+  {% include layout/copyright.html %}
 
 </footer>
