--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -1,7 +1,7 @@
 <div class="site-home lg-page lg-height-full">
 
-  {% include nav.html %}
-  {% include header.html %}
+  {% include layout/nav.html %}
+  {% include layout/header.html %}
 
   <div class="p2">
     <section class="width-full center-block align-center pb3">
@@ -26,7 +26,7 @@
         </div><!--
         -->{% endfor %}
 
-        {% include copyright.html %}
+        {% include layout/copyright.html %}
 
     </section>
 
