--- a/_includes/layout/splash.html
+++ b/_includes/layout/splash.html
@@ -18,6 +18,6 @@
     Passionate about creating<br /> digital products—obsessed with simplicity &amp; experience.
   </p>
 
-  {% include icon-twitter.html username="danklammer" %}
+  {% include icons/social-twitter.html username="danklammer" %}
 
 </div>
