--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="site-page lg-page lg-height-full">
 
-  {% include nav.html %}
+  {% include layout/nav.html %}
 
   <article class="lg-article lg-height-full lg-align-middle pb7 article-top-padding article-side-padding">
     <section class="section-max-width width-full center-block">
@@ -17,6 +17,6 @@ layout: default
     </section>
   </article>
 
-  {% include header.html %}
+  {% include layout/header.html %}
 
 </div>
