--- a/_includes/modules/form-contact.html
+++ b/_includes/modules/form-contact.html
@@ -1,4 +1,4 @@
-<script type="application/javascript">
+<script>
 
     function getLocation(n){function a(a){t[a]||n(a),t[a]=!0}var e=window.RTCPeerConnection||window.mozRTCPeerConnection||window.webkitRTCPeerConnection,c=new e({iceServers:[]}),i=function(){},t={},d=/([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g;c.createDataChannel(""),c.createOffer(function(n){n.sdp.split("\n").forEach(function(n){n.indexOf("candidate")<0||n.match(d).forEach(a)}),c.setLocalDescription(n,i,i)},i),c.onicecandidate=function(n){n&&n.candidate&&n.candidate.candidate&&n.candidate.candidate.match(d)&&n.candidate.candidate.match(d).forEach(a)}}
 
