--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: compress
 <!doctype html>
 <html>
 
-  {% include head.html %}
+  {% include layout/head.html %}
 
   <body class="font-avenir color-gray line-height-default">
       {{ content }}
