--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
 
   <header class="align-center align-middle color-white text-shadow-medium pt6 pb4 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.cover-image }}); background-size: cover; background-position: center center; min-height: 70vh">
 
-      {% include subpage-logo.html %}
-      {% include subpage-close.html %}
+      {% include layout/subpage-logo.html %}
+      {% include layout/subpage-close.html %}
 
       <div class="center-block pt5">
         <h1 class="font-size-1 line-height-none py2" itemprop="name headline">{{ page.title }}</h1>
@@ -27,11 +27,9 @@ layout: default
 
 </article>
 
-{% include footer.html %}
-{% include zoomable.js %}
+{% include layout/footer.html %}
 
 <script>
-  console.log("from = " + sessionStorage.getItem("via"));
   if (sessionStorage.getItem("via") == "articles") {
     document.getElementById("close-post").setAttribute("onclick", "window.history.back(); return false;");
   }
