--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -435,6 +435,7 @@ i, em, .italic {
     user-select: none;
 }
 
+.pointerevents-none { pointer-events: none }
 .appearance-none { -webkit-appearance: none }
 
 
