--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -20,7 +20,7 @@
   <link rel="apple-touch-icon" href="{{ "/apple-touch-icon.png" | prepend: site.baseurl }}">
   <link href="{{ "/favicon.ico" | prepend: site.baseurl }}" rel="shortcut icon" type="image/x-icon">
 
-  {% if page.path contains 'work' %}
+  {% if page.path contains '_posts' %}
     <style>
       .post-content a, .color-page { color: rgb({{ page.color }}) }
       .post-content a.btn, .bg-page { color: #fff; background: rgb({{ page.color }}) }
