Use more consistent subtitle instead of tagline

--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -11,7 +11,7 @@
 
             <div class="center-block px3 pt5 pb2">
                 <h2 class="font-size-2">{{ post.title }}</h2>
-                <div class="block font-size-5 tracking-slight font-weight-5 py3">{{ post.tagline }}</div>
+                <div class="block font-size-5 tracking-slight font-weight-5 py3">{{ post.subtitle }}</div>
                 <div class="inline-block font-size-6 font-weight-4 tracking-slight br5 px3 py2 mt1 mb2" style="background: rgba(0,0,0,0.14)">
                   {{ post.year }} <small class="bullet inline-block-middle opacity-7">&bull;</small> {{ post.role }}
                 </div>
