--- a/_includes/layout/head.html
+++ b/_includes/layout/head.html
@@ -7,7 +7,11 @@
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ page.description }}{% endif %}">
   <meta name="author" content="{{ site.title }}">
 
-  <meta property="og:url" content="{{ page.url | prepend: site.url }}" />
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@danklammer">
+  <meta name="twitter:creator" content="@danklammer">
+
+  <meta property="og:url" content="{{ page.url | prepend: site.url }}">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="{{ site.title }}">
   <meta property="og:title" content="{% if page.title %}{{ page.title | escape }} &mdash; {% if page.subtitle %}{{ page.subtitle }}{% else %}{{ site.title }}{% endif %}{% else %}{{ site.title | escape }} &mdash; {{ site.description }}{% endif %}">
@@ -16,7 +20,7 @@
   {% if page.hero-image %}
     <meta property="og:image" content="{{ page.hero-image | prepend: site.url }}">
   {% else %}
-    <meta property="og:image" content="{{ "/img/meta/dk-og.png" | prepend: site.url }}">
+    <meta property="og:image" content="{{ '/img/meta/dk-og.png' | prepend: site.url }}">
   {% endif %}
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
