--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -71,6 +71,7 @@ i, em, .italic {
 .uppercase { text-transform: uppercase }
 
 .line-height-none { line-height: 1 }
+.line-height-slight { line-height: 1.25 }
 .line-height-title { line-height: 1.5 }
 .line-height-default { line-height: 1.75 }
 
