Now all JS is loaded at the bottom of doc, Use ModuleJS Args in front matter

--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -32,4 +32,7 @@
 
 </div>
 
-<script>sessionStorage.setItem("via", "home");</script>
+<script>
+  sessionStorage.setItem("via", "home");
+  {% include layout/scripts.js %}
+</script>
