--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -40,4 +40,6 @@ layout: default
   if (sessionStorage.getItem("via") == "home") {
     document.getElementById("close-post").setAttribute("onclick", "window.history.back(); return false;");
   }
+
+  {% include layout/scripts.js %}
 </script>
