--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -18,7 +18,7 @@ layout: default
       </div>
 
       {% if page.hero-image %}
-      <div class="width-full center-block slidefade" style="height: 80vw; max-height: 435px; {% if page.hero-maxwidth %}max-width: {{ page.hero-maxwidth }};{% endif %} background-image: url({{ page.hero-image }}); background-size: auto 100%; background-position: {{ page.hero-position }}; background-repeat: {{ page.hero-repeat }}">
+      <div class="width-full center-block slidefade" style="height: 80vw; max-height: 435px; {% if page.hero-maxwidth %}max-width: {{ page.hero-maxwidth }};{% endif %} background-image: url({{ page.hero-image }}); background-size: auto 100%; background-position-x: {{ page.hero-position }}; background-position-y: bottom; background-repeat: {{ page.hero-repeat }}">
       </div>
       {% endif %}
 
