--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,22 @@ a { color: #3498db }
     margin-top: 2.25rem;
 }
 
+.post-content li, .page-content li {
+    list-style: none;
+}
+    
+.post-content li:before,
+.page-content li:before {
+    content: "\2022";
+    font-size: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: inherit;
+    width: 1.25rem;
+    margin-left: -1.25rem;
+}
+
+
 hr {
     border-width: 1px 0 0 0;
     border-style: solid;
@@ -74,6 +90,7 @@ hr {
     font-size: 8px;
     padding: 0 2px;
 }
+
 
 @keyframes slideFade { from { transform: translateY(15px); opacity: 0 } to { transform: translateY(0); opacity: 1 } }
 
