What gives Safari 8

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-post lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center align-middle color-white text-shadow-medium pt6 pb4 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.hero-image }}); -o-background-size: cover; -moz-background-size: cover; -webkit-background-size: cover; background-size: cover; background-position: center center; min-height: 70vh">
+  <header class="align-center align-middle color-white text-shadow-medium pt6 pb4 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.hero-image }}); background-size: cover; background-position: center center; min-height: 70vh">
 
       {% include layout/subpage-logo.html %}
       {% include layout/subpage-close.html %}
