--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,15 @@ $article-side-padding: 1.25rem;
 
 $zoom-margin: ($sm-breakpoint / 2);
 
+
+// Import partials
+@import
+    "tinyset",
+    "syntax-highlighting",
+    "photoswipe"
+;
+
+
 // Font Family
 .font-avenir { font-family: 'Avenir Next', Avenir, 'Helvetica Neue', helvetica, sans-serif }
 .font-menlo, code { font-family: Menlo, Consolas, Monaco, monospace }
@@ -92,13 +101,23 @@ hr {
 }
 
 
+@-webkit-keyframes  slideFade { from { -webkit-transform: translateY(15px); opacity: 0 } to { -webkit-transform: translateY(0); opacity: 1 } }
+@-moz-keyframes slideFade { from { -moz-transform: translateY(15px); opacity: 0 } to { -moz-transform: translateY(0); opacity: 1 } }
+@-ms-keyframes slideFade { from { -ms-transform: translateY(15px); opacity: 0 } to { -ms-transform: translateY(0); opacity: 1 } }
 @keyframes slideFade { from { transform: translateY(15px); opacity: 0 } to { transform: translateY(0); opacity: 1 } }
 
 .slidefade {
-    transform: translateY(15px);
     opacity: 0;
+    -webkit-transform: translateY(15px);
+    -moz-transform: translateY(15px);
+    -ms-transform: translateY(15px);
+    transform: translateY(15px);
+    -webkit-animation: slideFade 1s ease-out 1 forwards;
+    -moz-animation: slideFade 1s ease-out 1 forwards;
+    -ms-animation: slideFade 1s ease-out 1 forwards;
     animation: slideFade 1s ease-out 1 forwards;
 }
+
 
 // Navigation
 .navlink-off, .navlink-on { position: relative }
@@ -264,6 +283,8 @@ hr {
         left: 0;
         width: 35%;
         height: 100vh;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
     }
 
     .lg-page {
@@ -279,11 +300,3 @@ hr {
     }
 
 }
-
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-    "tinyset",
-    "syntax-highlighting",
-    "photoswipe"
-;
