--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -133,6 +133,7 @@ i, em, .italic {
     flex-direction: column;
     -webkit-justify-content: center;
     -ms-flex-pack: center;
+    justify-content: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
@@ -475,6 +476,7 @@ i, em, .italic {
         flex-direction: column;
         -webkit-justify-content: center;
         -ms-flex-pack: center;
+        justify-content: center;
         -webkit-align-items: center;
         -ms-flex-align: center;
         align-items: center;
@@ -518,6 +520,7 @@ i, em, .italic {
         flex-direction: column;
         -webkit-justify-content: center;
         -ms-flex-pack: center;
+        justify-content: center;
         -webkit-align-items: center;
         -ms-flex-align: center;
         align-items: center;
