--- a/css/main.scss
+++ b/css/main.scss
@@ -21,7 +21,7 @@ $zoom-margin: ($sm-breakpoint / 2);
 
 
 // Font Family
-.font-avenir { font-family: 'Avenir Next', Avenir, 'Helvetica Neue', helvetica, sans-serif }
+.font-avenir { font-family: 'Avenir Next', Avenir, 'Helvetica Neue', helvetica, arial, sans-serif }
 .font-menlo, code { font-family: Menlo, Consolas, Monaco, monospace }
 
 
