Add height to SVG, for IE

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -1,7 +1,7 @@
 <header class="lg-header lg-align-middle align-center bg-slate color-white py6">
 
   <a href="{{ site.baseurl }}/">
-    {% include icons/icon-logo.svg width="64" stroke-width="3%" class="color-blue" %}
+    {% include icons/icon-logo.svg width="64" height="64" stroke-width="3%" class="color-blue" %}
   </a>
   
   <a class="center-block color-white font-size-1 font-weight-4 line-height-title lowercase underline-none" href="{{ site.baseurl }}/">
