See ya flexbox, Hello table-cell

--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -1,20 +1,22 @@
-<header class="lg-header lg-align-middle align-center bg-slate color-white py6">
+<header class="lg-header lg-table align-center bg-slate color-white py6">
 
-  <a href="{{ site.baseurl }}/">
-    {% include icons/icon-logo.svg width="64" height="64" stroke-width="3%" class="color-blue" %}
-  </a>
-  
-  <a class="center-block color-white font-size-1 font-weight-4 line-height-title lowercase underline-none" href="{{ site.baseurl }}/">
-  {{ site.title }}
-  </a>
+  <div class="lg-table-cell-middle">
+    <a href="{{ site.baseurl }}/">
+      {% include icons/icon-logo.svg width="64" height="64" stroke-width="3%" class="color-blue" %}
+    </a>
+    
+    <a class="center-block color-white font-size-1 font-weight-4 line-height-title lowercase underline-none" href="{{ site.baseurl }}/">
+    {{ site.title }}
+    </a>
 
-  <span class="center-block font-size-7 uppercase tracking-super opacity-5">
-    Designer &amp; Developer
-  </span>
-  
-  <p class="sm-header-tagline font-size-4 font-weight-3 my4 center-block" style="max-width: 19rem">
-    Passionate about creating<br /> digital products—obsessed with simplicity &amp; experience.
-  </p>
+    <span class="center-block font-size-7 uppercase tracking-super opacity-5">
+      Designer &amp; Developer
+    </span>
+    
+    <p class="sm-header-tagline font-size-4 font-weight-3 my4 center-block" style="max-width: 19rem">
+      Passionate about creating<br /> digital products—obsessed with simplicity &amp; experience.
+    </p>
+  </div>
 
   {% include layout/social-links.html %}
 
