--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -1,4 +1,4 @@
-<div class="site-home lg-page lg-height-full">
+<div class="site-home lg-page">
 
   {% include layout/nav.html %}
   {% include layout/header.html %}
