--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,8 +6,8 @@ layout: default
 
   {% include layout/nav.html %}
 
-  <article class="lg-article lg-height-full lg-align-middle pb7 article-top-padding article-side-padding">
-    <section class="section-max-width width-full center-block">
+  <article class="lg-article lg-height-full lg-table width-full section-max-width pb7 article-top-padding article-side-padding">
+    <section class="lg-table-cell-middle">
 
     <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
     <div class="page-content">
