We be compatible!

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="site-project lg-post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="center-block color-white text-shadow-medium box-shadow-light pt5 overflow-hidden" style="background: linear-gradient(to bottom, rgba(0,0,0,0.2) 0, rgba(0,0,0,0) 8rem), rgb({{ page.color }});">
       
