--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,15 +6,17 @@ layout: default
 
   {% include layout/nav.html %}
 
-  <article class="lg-article lg-height-full lg-table width-full section-max-width pb7 article-top-padding article-side-padding">
-    <section class="lg-table-cell-middle">
+  <article class="lg-article lg-table lg-height-full width-full pb7 article-top-padding article-side-padding">
+    <div class="lg-table-cell-middle">
+      <section class="section-max-width width-full">
 
-    <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
-    <div class="page-content">
-        {{ content }}
+        <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
+        <div class="page-content">
+            {{ content }}
+        </div>
+
+      </section>
     </div>
-
-    </section>
   </article>
 
   {% include layout/header.html %}
