--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -128,6 +128,13 @@ i, em, .italic {
 .align-right { text-align: right }
 .align-center { text-align: center }
 
+.align-middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .inline-block {
     display: inline-block;
     vertical-align: top
