--- a/_includes/modules/plugin-photoswipe.html
+++ b/_includes/modules/plugin-photoswipe.html
@@ -19,7 +19,7 @@
                 <div class="pswp__counter"></div>
 
                 <button class="pswp__button pswp__button--close svg-shadow-dark" title="Close (Esc)">
-                    {% include icons/icon-close.svg width="38" stroke-width="8%" class="color-white mt2 mr2 p2 pointerevents-none" %}
+                    {% include icons/icon-close.svg width="38" height="38" stroke-width="8%" class="color-white mt2 mr2 p2 pointerevents-none" %}
                 </button>
 
                 <button class="pswp__button pswp__button--share" title="Share"></button>
@@ -42,11 +42,11 @@
             </div>
 
             <button class="pswp__button pswp__button--arrow--left svg-shadow-dark" title="Previous (arrow left)">
-                {% include icons/icon-chevron-left.svg width="52" stroke-width="8%" class="color-white p2 pointerevents-none" %}
+                {% include icons/icon-chevron-left.svg width="52" height="52" stroke-width="8%" class="color-white p2 pointerevents-none" %}
             </button>
 
             <button class="pswp__button pswp__button--arrow--right svg-shadow-dark" title="Next (arrow right)">
-                {% include icons/icon-chevron-right.svg width="52" stroke-width="8%" class="color-white p2 pointerevents-none" %}
+                {% include icons/icon-chevron-right.svg width="52" height="52" stroke-width="8%" class="color-white p2 pointerevents-none" %}
             </button>
 
             <div class="pswp__caption align-center">
