--- a/_includes/modules/form-contact.html
+++ b/_includes/modules/form-contact.html
@@ -1,13 +1,13 @@
 <form method="POST" action="https://formspree.io/{{ site.contact_email }}" class="contact-form relative clearfix" style="margin: 0 -0.5rem">
     
     <div class="inline-block width-full lg-width-50 p2">
-        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="width-full p2 br3 appearance-none" tabindex="1" required>
+        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="width-full px2 py3 br3 appearance-none" tabindex="1" required>
 
     </div><div class="inline-block width-full lg-width-50 p2">
-        <input type="email" name="_replyto" placeholder="Your email" class="width-full p2 br3 appearance-none" tabindex="2" required>
+        <input type="email" name="_replyto" placeholder="Your email" class="width-full px2 py3 br3 appearance-none" tabindex="2" required>
 
     </div><div class="inline-block width-full p2">
-        <textarea name="message" rows="4" cols="50" placeholder="Your message" class="width-full p2 br3 appearance-none" style="resize:none" tabindex="3" required></textarea>
+        <textarea name="message" rows="4" cols="50" placeholder="Your message" class="width-full px2 py3 br3 appearance-none" style="resize:none" tabindex="3" required></textarea>
 
     </div>
 
@@ -17,6 +17,6 @@
     <input type="hidden" name="_format" value="plain" />
     <input type="hidden" name="_next" value="/contact/thanks/" />
 
-    <button type="submit" value="Send" class="color-white bg-blue right py1 px3 mx2 br3 dim pointer pressable" tabindex="4">Submit</button>
+    <button type="submit" value="Send" class="color-white bg-blue right py2 px3 mx2 br3 dim pointer pressable" tabindex="4">Submit</button>
 
 </form>
