--- a/_includes/modules/form-contact.html
+++ b/_includes/modules/form-contact.html
@@ -1,13 +1,16 @@
 <form method="POST" action="https://formspree.io/{{ site.contact_email }}" class="contact-form relative clearfix" style="margin: 0 -0.5rem">
     
-    <div class="inline-block width-full lg-width-50 p2">
-        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="width-full px2 py3 br3 appearance-none" tabindex="1" required>
+    <div class="inline-block width-full lg-width-50 p2 relative">
+        <label class="contact-label font-size-7 bold color-blue absolute t1 l3 pt2 opacity-0 pointerevents-none">Your name</label>
+        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="contact-field width-full px2 py3 br3 appearance-none" tabindex="1" value="" required>
 
-    </div><div class="inline-block width-full lg-width-50 p2">
-        <input type="email" name="_replyto" placeholder="Your email" class="width-full px2 py3 br3 appearance-none" tabindex="2" required>
+    </div><div class="inline-block width-full lg-width-50 p2 relative">
+        <label class="contact-label font-size-7 bold color-blue absolute t1 l3 pt2 opacity-0 pointerevents-none">Your email</label>
+        <input type="email" name="_replyto" placeholder="Your email" class="contact-field width-full px2 py3 br3 appearance-none" tabindex="2" value="" required>
 
-    </div><div class="inline-block width-full p2">
-        <textarea name="message" rows="4" cols="50" placeholder="Your message" class="width-full px2 py3 br3 appearance-none" style="resize:none" tabindex="3" required></textarea>
+    </div><div class="inline-block width-full p2 relative">
+        <label class="contact-label font-size-7 bold color-blue absolute t1 l3 pt2 opacity-0 pointerevents-none">Your message</label>
+        <textarea name="message" rows="6" cols="50" placeholder="Your message" class="contact-field width-full px2 py3 br3 appearance-none" style="resize:none" tabindex="3" value="" required></textarea>
 
     </div>
 
