--- a/_sass/_tinyset.scss
+++ b/_sass/_tinyset.scss
@@ -383,6 +383,7 @@ i, em, .italic {
 
 /* Opacity */
 
+.opacity-0 { opacity: 0   }
 .opacity-1 { opacity: 0.1 }
 .opacity-2 { opacity: 0.2 }
 .opacity-3 { opacity: 0.3 }
