Should fix the IE bug

--- a/_includes/modules/form-contact.html
+++ b/_includes/modules/form-contact.html
@@ -2,7 +2,7 @@
     
     <div class="inline-block width-full lg-width-50 p2 relative">
         <label class="contact-label font-size-7 bold color-blue absolute t1 l3 pt2 opacity-0 pointerevents-none">Your name</label>
-        <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" class="contact-field width-full px2 py3 br3 appearance-none" tabindex="1" value="" required>
+        <input type="text" name="name" placeholder="Your name" onblur="passName(this)" class="contact-field width-full px2 py3 br3 appearance-none" tabindex="1" value="" required>
 
     </div><div class="inline-block width-full lg-width-50 p2 relative">
         <label class="contact-label font-size-7 bold color-blue absolute t1 l3 pt2 opacity-0 pointerevents-none">Your email</label>
