Add Google Analytics

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,5 +24,10 @@ layout: default
 </div>
 
 <script>
+
   {% include layout/scripts.js %}
+
+  window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+  ga('create','{{ site.google_analytics }}','auto');ga('send','pageview')
 </script>
+<script src="https://www.google-analytics.com/analytics.js" async defer></script>
