--- a/_includes/layout/homepage.html
+++ b/_includes/layout/homepage.html
@@ -35,4 +35,8 @@
 <script>
   sessionStorage.setItem("via", "home");
   {% include layout/scripts.js %}
+
+  window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+  ga('create','{{ site.google_analytics }}','auto');ga('send','pageview')
 </script>
+<script src="https://www.google-analytics.com/analytics.js" async defer></script>
